# tarobot

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  recognize_taro.py
docs/: backlog.md  iterations.md  risks.md  tts-style.md  vision-mvp.md
src/tarobot/: app.py  artifacts.py  cards.py  cli.py  config.py  llm.py  models.py  prompts.py  tts.py
src/tarobot/vision/: __init__.py  cli.py  playing_cards.py  tarot_cards.py
tests/: test_flow.py  test_playing_cards_vision.py  test_tarot_cards_vision.py  test_yandex_providers.py
tests/examples/card_set/: manifest.json
tests/examples/taro_cards/: manifest.json
