[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tarobot"
version = "0.1.0"
description = "Na-kolenke MVP for a tarot reading service"
requires-python = ">=3.14"
dependencies = [
  "numpy>=2",
  "opencv-python-headless>=4.13",
]

[tool.setuptools.packages.find]
where = ["src"]
